style(footer__sm): fix white space
This commit includes changes to white spaces on sm screens.
The changes include:

- Adjusting text size and removing white spaces from footer info block.
- Reduced text size and removal of white spaces from footer info link
block.

These changes ensure that the above named blocks renders well on sm
devices and window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -1385,20 +1385,21 @@ vertical-align: top;
   min-height: 30rem;
   display: grid;
   grid-template-columns: 1fr;
-  justify-items: center;
-  padding: 10% 2%;
+  justify-items: center;  
+  font-size:1.8rem
 }
 
 .footer__info-block {
   min-height: 15rem;
-  width:80%;
+  width:90%;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top:8rem;
 }
 
 .footer__info {
-  width: 100%;
+  width:90%;
   min-height: 15rem;
 }
 
@@ -1411,23 +1412,25 @@ vertical-align: top;
 
 .footer__info-link-block {
   min-height: 15rem;
+  width:80%;
   display: flex;
   justify-content: center;
   align-items: center; 
-  margin-top:5rem;
+  margin-top:4rem;
 }
 
 .footer__info-links {
   min-height: 15rem;
-  width: 80%;
-  display:flex; 
-  row-gap:4rem; 
+  width: 100%;
+  display:flex;  
+  column-gap:6rem;  
+  row-gap: 4rem;;
   flex-wrap: wrap; 
 }
 
 .footer__info-link-list {
   list-style: none;
-  width:14rem; 
+  width:10rem; 
 }
 
 .footer__info-link-item {
